--- a/client/src/index.html
+++ b/client/src/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Darman</title>
-  <base href="/mehraneh_darman/client/dist/">
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
- 
+
+
 </head>
 <body>
   <app-root>Loading...</app-root>
